Updated readme, menu

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <span class="icon"><img src="images/strawberry-matcha.svg" alt="" width="32" height="32"></span>
               <div>
                 <div class="name">Iced Strawberry Matcha Latte</div>
-                <div class="badges"><span class="badge">Matcha</span><span class="badge">Strawberry milk</span></div>
+                <div class="badges"><span class="badge">Matcha</span><span class="badge">Strawberry puree</span></div>
               </div>
             </li>
           </ul>
