--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
         <img class="logo" src="images/logo.svg" alt="Triple Bean Cafe logo">
         <h1>Triple Bean Cafe</h1>
       </div>
-      <p class="tagline">A cozy home bar in warm beige &amp; walnut.</p>
+      <p class="tagline">
+        ☕🌿 Welcome to Triple Bean Café — a cosy corner for coffee, calm, and conversation.<br><br>
+        We brew with care, take pride in slow mornings, and believe good coffee should feel like a small luxury.<br><br>
+        ✨ Sit. Stay. Sip.<br>
+        Your seat is always waiting.
+      </p>
     </header>
 
     <main class="menu" aria-label="Menu">
