Updated menu item (separated cards) Modified styles

--- a/index.html
+++ b/index.html
@@ -30,48 +30,66 @@
       <div class="divider" role="separator" aria-hidden="true"></div>
 
       <div class="sections" id="menuSections">
+        <!-- Coffee -->
         <section class="section" aria-labelledby="coffee-title">
           <h3 id="coffee-title">Coffee</h3>
           <ul class="menu-list">
-            <li class="card orderable" data-item="Black">
-              <div class="icon"><img src="images/black.svg" alt="" width="32" height="32"></div>
-              <div><div class="name">Black</div><div class="meta">Tap to add • Hot or Ice</div></div>
-              <div class="qty" data-qty="Black"><button type="button" data-action="dec">−</button><span class="count">0</span><button type="button" data-action="inc">+</button></div>
+            <li class="card orderable" data-item="Iced Black">
+              <div class="icon" data-badge="❄️"><img src="images/iced-black.svg" alt="" width="32" height="32"></div>
+              <div><div class="name">Iced Black</div><div class="meta">Tap to add</div></div>
+              <div class="qty" data-qty="Iced Black"><button type="button" data-action="dec">−</button><span class="count">0</span><button type="button" data-action="inc">+</button></div>
             </li>
-            <li class="card orderable" data-item="White">
-              <div class="icon"><img src="images/white.svg" alt="" width="32" height="32"></div>
-              <div><div class="name">White</div><div class="meta">Tap to add • Hot or Ice</div></div>
-              <div class="qty" data-qty="White"><button type="button" data-action="dec">−</button><span class="count">0</span><button type="button" data-action="inc">+</button></div>
+            <li class="card orderable" data-item="Hot Black">
+              <div class="icon" data-badge="🔥"><img src="images/hot-black.svg" alt="" width="32" height="32"></div>
+              <div><div class="name">Hot Black</div><div class="meta">Tap to add</div></div>
+              <div class="qty" data-qty="Hot Black"><button type="button" data-action="dec">−</button><span class="count">0</span><button type="button" data-action="inc">+</button></div>
             </li>
-            <li class="card orderable" data-item="Iced Aerocano">
-              <div class="icon"><img src="images/aerocano.svg" alt="" width="32" height="32"></div>
-              <div><div class="name">Iced Aerocano</div><div class="meta">Tap to add • Aerated espresso on ice</div></div>
-              <div class="qty" data-qty="Iced Aerocano"><button type="button" data-action="dec">−</button><span class="count">0</span><button type="button" data-action="inc">+</button></div>
+            <li class="card orderable" data-item="Iced White">
+              <div class="icon" data-badge="❄️"><img src="images/iced-white.svg" alt="" width="32" height="32"></div>
+              <div><div class="name">Iced White</div><div class="meta">Tap to add</div></div>
+              <div class="qty" data-qty="Iced White"><button type="button" data-action="dec">−</button><span class="count">0</span><button type="button" data-action="inc">+</button></div>
+            </li>
+            <li class="card orderable" data-item="Hot White">
+              <div class="icon" data-badge="🔥"><img src="images/hot-white.svg" alt="" width="32" height="32"></div>
+              <div><div class="name">Hot White</div><div class="meta">Tap to add</div></div>
+              <div class="qty" data-qty="Hot White"><button type="button" data-action="dec">−</button><span class="count">0</span><button type="button" data-action="inc">+</button></div>
+            </li>
+            <li class="card orderable" data-item="Aerocano">
+              <div class="icon" data-badge="❄️"><img src="images/aerocano.svg" alt="" width="32" height="32"></div>
+              <div><div class="name">Aerocano</div><div class="meta">Aerated espresso on ice • Tap to add</div></div>
+              <div class="qty" data-qty="Aerocano"><button type="button" data-action="dec">−</button><span class="count">0</span><button type="button" data-action="inc">+</button></div>
             </li>
             <li class="card orderable" data-item="Affogato">
-              <div class="icon"><img src="images/affogato.svg" alt="" width="32" height="32"></div>
-              <div><div class="name">Affogato</div><div class="meta">Tap to add • Espresso + vanilla ice cream</div></div>
+              <div class="icon" data-badge="❄️"><img src="images/affogato.svg" alt="" width="32" height="32"></div>
+              <div><div class="name">Affogato</div><div class="meta">Vanilla ice cream + double espresso • Tap to add</div></div>
               <div class="qty" data-qty="Affogato"><button type="button" data-action="dec">−</button><span class="count">0</span><button type="button" data-action="inc">+</button></div>
             </li>
           </ul>
         </section>
 
+        <!-- Tea -->
         <section class="section" aria-labelledby="tea-title">
           <h3 id="tea-title">Tea</h3>
           <ul class="menu-list">
-            <li class="card orderable" data-item="Matcha Latte">
-              <div class="icon"><img src="images/matcha.svg" alt="" width="32" height="32"></div>
-              <div><div class="name">Matcha Latte</div><div class="meta">Tap to add • Hot or Ice</div></div>
-              <div class="qty" data-qty="Matcha Latte"><button type="button" data-action="dec">−</button><span class="count">0</span><button type="button" data-action="inc">+</button></div>
+            <li class="card orderable" data-item="Iced Matcha Latte">
+              <div class="icon" data-badge="❄️"><img src="images/iced-matcha.svg" alt="" width="32" height="32"></div>
+              <div><div class="name">Iced Matcha Latte</div><div class="meta">Tap to add</div></div>
+              <div class="qty" data-qty="Iced Matcha Latte"><button type="button" data-action="dec">−</button><span class="count">0</span><button type="button" data-action="inc">+</button></div>
+            </li>
+            <li class="card orderable" data-item="Hot Matcha Latte">
+              <div class="icon" data-badge="🔥"><img src="images/hot-matcha.svg" alt="" width="32" height="32"></div>
+              <div><div class="name">Hot Matcha Latte</div><div class="meta">Tap to add</div></div>
+              <div class="qty" data-qty="Hot Matcha Latte"><button type="button" data-action="dec">−</button><span class="count">0</span><button type="button" data-action="inc">+</button></div>
             </li>
             <li class="card orderable" data-item="Iced Strawberry Matcha Latte">
-              <div class="icon"><img src="images/strawberry-matcha.svg" alt="" width="32" height="32"></div>
-              <div><div class="name">Iced Strawberry Matcha Latte</div><div class="meta">Tap to add • Matcha + strawberry milk</div></div>
+              <div class="icon" data-badge="❄️"><img src="images/strawberry-matcha.svg" alt="" width="32" height="32"></div>
+              <div><div class="name">Iced Strawberry Matcha Latte</div><div class="meta">Tap to add</div></div>
               <div class="qty" data-qty="Iced Strawberry Matcha Latte"><button type="button" data-action="dec">−</button><span class="count">0</span><button type="button" data-action="inc">+</button></div>
             </li>
           </ul>
         </section>
 
+        <!-- Misc -->
         <section class="section" aria-labelledby="misc-title">
           <h3 id="misc-title">Misc</h3>
           <ul class="menu-list">
@@ -80,8 +98,8 @@
               <div><div class="name">Assorted Drinks in Fridge</div><div class="meta">Self-serve — help yourself from the fridge</div></div>
             </li>
             <li class="card orderable" data-item="Gin & Tonic">
-              <div class="icon"><img src="images/gin-tonic.svg" alt="" width="32" height="32"></div>
-              <div><div class="name">Gin &amp; Tonic</div><div class="meta">Tap to add • Roku + tonic</div></div>
+              <div class="icon" data-badge="❄️"><img src="images/gin-tonic.svg" alt="" width="32" height="32"></div>
+              <div><div class="name">Gin &amp; Tonic</div><div class="meta">Tap to add</div></div>
               <div class="qty" data-qty="Gin & Tonic"><button type="button" data-action="dec">−</button><span class="count">0</span><button type="button" data-action="inc">+</button></div>
             </li>
           </ul>
@@ -104,6 +122,8 @@
 
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
+
+    // >>> REPLACE with your current /exec URL (keep it exactly as in your working version)
     const ORDER_ENDPOINT = "https://script.google.com/macros/s/AKfycbykR7MxOkPuKtz7Sa92HJG9W1qOecMrydAf7LPQBYL2wpA1ULcj97WAfcBWZW29CdmJ/exec";
 
     const counts = {};
@@ -144,7 +164,7 @@
         const res = await fetch(ORDER_ENDPOINT, { method:'POST', headers:{ 'Content-Type':'text/plain;charset=utf-8' }, body: JSON.stringify(payload) });
         const data = await res.json().catch(()=>({}));
         if(data.ok){
-          statusEl.textContent = "Order sent! Check your email.";
+          statusEl.textContent = "Order sent! Thank you ☕.";
           Object.keys(counts).forEach(k=>{ counts[k]=0; render(k); });
           document.getElementById('guestName').value=""; document.getElementById('note').value="";
         } else if(data.error==="closed"){
@@ -153,7 +173,7 @@
         } else {
           statusEl.textContent = "Failed to send.";
         }
-      }catch{ statusEl.textContent="Network error."; }
+      }catch{ statusEl.textContent = "Network error."; }
     });
   </script>
 </body>
