Updated menu item description for Iced Strawberry Matcha Latte

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </li>
             <li class="card orderable" data-item="Iced Strawberry Matcha Latte">
               <div class="icon" data-badge="❄️"><img src="images/strawberry-matcha.svg" alt="" width="32" height="32"></div>
-              <div><div class="name">Ichigo Matcha</div><div class="meta">Strawberry puree + matcha + milk • Tap to add</div></div>
+              <div><div class="name">Matcha Ichigo</div><div class="meta">Strawberry puree + matcha + milk • Tap to add</div></div>
               <div class="qty" data-qty="Iced Strawberry Matcha Latte"><button type="button" data-action="dec">−</button><span class="count">0</span><button type="button" data-action="inc">+</button></div>
             </li>
           </ul>
